--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -22,4 +22,4 @@ $primary-gradient: linear-gradient(163deg, $color-gradient-blue, $color-gradient
 
 // Sizes
 $tablet: '(min-width: 680px)';
-$desktop: '(min-width: 1024px)';
+$desktop: '(min-width: 1180px)';
